--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ html {
 }
 
 .article-details {
-  gap: var(--150);
+  gap: var(--100);
 }
 
 .category-container {
@@ -60,7 +60,6 @@ html {
   align-items: center;
   justify-content: center;
   border-radius: var(--50);
-  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.3);
 }
 
 .category {
@@ -76,12 +75,14 @@ html {
   font-size: var(--text-preset-3);
   color: var(--gray-950);
   line-height: 150%;
+  font-weight: 600;
 }
 
 .title {
   font-size: var(--text-preset-1);
   color: var(--gray-950);
   line-height: 150%;
+  font-weight: 800;
 }
 
 .title:hover {
